rns-lang/tests/snapshots/error-lexer-directives-dot_dot_class.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
..class
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/rns/test_data/integration/error/lexer/directives/dot_dot_class.ja:2:1 ]
   │
 2 │ ..class
   │ ───┬───  
   │    ╰───── did you mean '.class' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
