rns-lang/tests/snapshots/error-lexer-directives-dot_dot_code.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method      ..code
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/rns/test_data/integration/error/lexer/directives/dot_dot_code.ja:1:14 ]
   │
 1 │ .method      ..code
   │              ───┬──  
   │                 ╰──── did you mean '.code' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
