rns-lang/tests/snapshots/error-lexer-directives-dot_dot_method.snap
---
source: jasm/tests/jasm_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..method
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_dot_method.ja:1:1 ]
   │
 1 │ ..method
   │ ────┬───  
   │     ╰───── did you mean '.method' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
