rns-lang/tests/snapshots/error-lexer-directives-dot_dot_super_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
dot_dot_super ..super
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_super.ja:1:15 ]
   │
 1 │ dot_dot_super ..super
   │               ───┬───  
   │                  ╰───── did you mean '.super' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
