rns-lang/tests/snapshots/error-lexer-directives-dot_enum_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
;;;;;;;;;;;
;;;; enum

.enum ;??
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_enum.ja:4:1 ]
   │
 4 │ .enum ;??
   │ ──┬──  
   │   ╰──── did you mean '.end' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
